--- a/index.html
+++ b/index.html
@@ -24,18 +24,10 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
     />
-    <!-- AOS animation -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
-    <title>Vite + React</title>
+    <title>Alupak</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script>
-      AOS.init({
-        offset: 300,
-      });
-    </script>
   </body>
 </html>
