--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
     />
+    <!-- -- -->
+    <script> var global = global || window; var Buffer = Buffer || []; var process = process || { env: { DEBUG: undefined }, version: [] }; </script>
+    <!-- -- -->
     <title>Alupak</title>
   </head>
   <body>
