--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/dist/assets/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/dist/assets/Fav icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- FONT AWESOME -->
